# q-cli-agent

./: .gitignore  README.md  pyproject.toml  q.py  requirements.txt
examples/: config_example.env  mcp-servers-example.json
q/: __init__.py  main.py
q/cli/: __init__.py  approvals.py  commands.py  mcp_commands.py  qconsole.py  qprompt.py
q/code/: mcp.py
q/core/: __init__.py  config.py  constants.py  context.py  llm.py  logging.py  prompt.py  session.py  validation.py
q/docs/: mcp_servers.md
q/operators/: __init__.py  fetch.py  new.py  read.py  router.py  shell.py  write.py
q/prompts/: shell-results.md  system-prompt.md
q/utils/: __init__.py  command_analyzer.py  config_updater.py  helpers.py  llm_helpers.py  mcp_servers.py
